--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap-reboot.css" />
     <link href="cardGameStyling.css" rel="stylesheet" type="text/css" />
-    <script src="cardGameJava.js"></script>
+    <script src="Script2.js"></script>
 </head>
 <body>
     <h1>Welcome to Caspian's Card Game</h1>
